--- a/.github/workflows/Docker-Push.yml
+++ b/.github/workflows/Docker-Push.yml
@@ -15,6 +15,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       -
+        name: Checkout
+        uses: actions/checkout@v3
+      -
+        name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      -
         name: Login to DockerHub
         uses: docker/login-action@v1 
         with:
@@ -25,10 +31,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          context: ./
-          file: ./Dockerfile
+          context: .
           push: true
-          tags: bengotch/simplewhale:latest
+          tags: codykilpatrick/portfolio:latest
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
