--- a/.github/workflows/Docker-Push.yml
+++ b/.github/workflows/Docker-Push.yml
@@ -18,6 +18,17 @@ jobs:
         name: Checkout
         uses: actions/checkout@v3
       -
+        name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+      -
+        name: Cache Docker layers
+        uses: actions/cache@v2
+        with:
+          path: /tmp/.buildx-cache
+          key: ${{ runner.os }}-buildx-${{ github.sha }}
+          restore-keys: ${{ runner.os }}-buildx-
+      -
         name: Login to DockerHub
         uses: docker/login-action@v2
         with:
@@ -31,6 +42,8 @@ jobs:
           context: .
           push: true
           tags: codykilpatrick/portfolio:latest
+          cache-from: type=local,src=/tmp/.buildx-cache
+          cache-to: type=local,dest=/tmp/.buildx-cache
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
