--- a/.github/workflows/Docker-cache.yml
+++ b/.github/workflows/Docker-cache.yml
@@ -3,30 +3,23 @@ name: Cache Docker Compose Build
 on: push
 
 jobs:
-  cache:
+  docker:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Check out code
-      uses: actions/checkout@v4
-
-    - name: Cache Docker Compose files and images
-      id: cache-docker-compose
-      uses: actions/cache@v3
-      with:
-        path: |
-          ~/.docker
-          Dockerfile
-          compose.yaml
-        key: ${{ runner.os }}-docker-compose-${{ hashFiles('**/Dockerfile', '**/docker-compose.yml') }}
-
-    - name: Set cache hit flag
-      run: echo "::set-output name=cache-hit::${{ steps.cache-docker-compose.outputs.cache-hit == 'true' }}"
-
-    - name: Build Docker Compose project
-      run: |
-        if [ "${{ steps.cache-docker-compose.outputs.cache-hit }}" == "false" ]; then
-          docker compose up -d
-        fi
-      env:
-        DOCKER_BUILDKIT: 1
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: codykilpatrick/portfolio:latest
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
