--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -13,21 +13,18 @@ on:
       - main
 
 jobs:
-  checks:
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Check out code
-      uses: actions/checkout@v4
-
-    - name: Pull Docker Compose image
-      run: |
-        docker-compose -f compose.yaml pull
-      env:
-        DOCKER_BUILDKIT: 1
-
-    - name: Run Docker Compose checks
-      run: |
-        docker-compose -f compose.yaml run --rm checks
-      env:
-        DOCKER_BUILDKIT: 1
+  compile:
+      name: Compile site assets
+      runs-on: ubuntu-latest
+      steps:
+        - name: Check out the repo
+          uses: actions/checkout@v2
+        - name: Run the build process with Docker
+          uses: addnab/docker-run-action@v3
+          with:
+              image: aschmelyun/cleaver:latest
+              options: -v ${{ github.workspace }}:/var/www
+              run: |
+                  composer install
+                  npm install
+                  npm run production
