--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,17 +14,21 @@ on:
 
 jobs:
   compile:
-      name: Compile site assets
-      runs-on: ubuntu-latest
-      steps:
-        - name: Check out the repo
-          uses: actions/checkout@v2
-        - name: Run the build process with Docker
-          uses: addnab/docker-run-action@v3
-          with:
-              image: aschmelyun/cleaver:latest
-              options: -v ${{ github.workspace }}:/var/www
-              run: |
-                  composer install
-                  npm install
-                  npm run production
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # Add the npm install step to install project dependencies
+      - name: Install Node.js Dependencies
+        run: npm install
+
+      # Add the step to pull your Docker image
+      - name: Pull Docker image
+        run: docker pull codykilpatrick/portfolio:latest
+
+      # Add a step to run tests inside a Docker container
+      - name: Run Tests
+        run: |
+          docker run --rm -v "$(pwd)":/app -w /app codykilpatrick/portfolio:latest \
+          sh -c "npm test"
