--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -24,10 +24,11 @@ jobs:
         run: npm install
 
       # Add the step to pull your Docker image
-      # - name: Pull Docker image
-      #   run: docker pull codykilpatrick/portfolio:latest
+      - name: Pull Docker image
+        run: docker pull codykilpatrick/portfolio:latest
 
       # Add a step to run tests inside a Docker container
       - name: Run Tests
         run: |
+          docker run --rm -v "$(pwd)":/app -w /app codykilpatrick/portfolio:latest \
           sh -c "npm test"
