--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,12 +23,18 @@ jobs:
       - name: Install Node.js Dependencies
         run: npm install
 
-      # Add the step to pull your Docker image
-      - name: Pull Docker image
-        run: docker pull codykilpatrick/portfolio:latest
+      # Add the step to run the Docker container
+      - name: Run Docker Container
+        run: |
+          docker run -d --name my_container -v "$(pwd)":/app -w /app codykilpatrick/portfolio:latest sleep infinity
 
-      # Add a step to run tests inside a Docker container
+      # Add a step to execute tests inside the running Docker container
       - name: Run Tests
         run: |
-          docker run --rm -v "$(pwd)":/app -w /app codykilpatrick/portfolio:latest \
-          sh -c "npm test"
+          docker exec my_container sh -c "npm test" || (echo 'Tests failed' && exit 1)
+
+      # Cleanup: Stop and remove the Docker container
+      - name: Cleanup Docker Container
+        run: |
+          docker stop my_container
+          docker rm my_container
