add additional logging in container

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       # Add the npm install step to install project dependencies
       - name: Install Node.js Dependencies
@@ -31,4 +31,22 @@ jobs:
       - name: Run Tests
         run: |
           docker run --rm -v "$(pwd)":/app -w /app codykilpatrick/portfolio:latest \
-          sh -c "npm test" || (echo 'Tests failed' && exit 1)
+          sh -c "npm test"
+          test_exit_code=$?
+          if [ $test_exit_code -eq 0 ]; then
+            echo 'Tests passed'
+          else
+            echo 'Tests failed'
+            exit 1
+          fi
+
+      # Display the exit code for debugging purposes
+      - name: Display Exit Code
+        run: |
+          echo "Exit code from the tests: $test_exit_code"
+
+      # Cleanup: Stop and remove the Docker container
+      - name: Cleanup Docker Container
+        run: |
+          docker stop my_container
+          docker rm my_container
