--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,12 +19,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      # Add the npm install step to install project dependencies
+      - name: Install Node.js Dependencies
+        run: npm install
+
       # Add the step to pull your Docker image (if needed)
       - name: Pull Docker image
         run: docker pull codykilpatrick/portfolio:latest
 
-      # Your other steps go here...
-
-      # For example, you can start your Docker container with Docker Compose
+      # Use Docker Compose to start your container
       - name: Start Docker container
-        run: docker-compose up -d
+        run: docker-compose up -d github-action
+      
