--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -26,7 +26,7 @@ jobs:
       # Run tests in container
       - name: Run Tests
         run: |
-          if docker-compose exec -T github-action yarn test; then
+          if docker-compose exec -T github-action yarn react-scripts test --watchAll=false; then
             echo "Tests passed"
           else
             echo "Tests failed"
