--- a/.github/workflows/gh-container-cache.yml
+++ b/.github/workflows/gh-container-cache.yml
@@ -5,28 +5,27 @@ on:
     paths:
       - '**/Dockerfile'
       - '**/compose.yaml'
-
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v1
 
       - name: Login to GitHub Container Registry
-        uses: docker/login-action@v2
+        uses: docker/login-action@v1
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
+          username: codykilpatrick  # Use your lowercase username here
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         run: |
           docker buildx create --use
-          docker buildx build --push --tag ghcr.io/${{ github.repository }}:latest .
+          docker buildx build --push --tag ghcr.io/codykilpatrick/portfolio-react:latest .
         env:
           DOCKER_CLI_AGGREGATE: 1
 
