--- a/.github/workflows/checks-ghcr.yml
+++ b/.github/workflows/checks-ghcr.yml
@@ -12,18 +12,21 @@ on:
     branches:
       - main
 
+env:
+  REGISTRY: ghcr.io
+
 jobs:
-  compile:
+  test:
     runs-on: ubuntu-latest
+    permissions:
+      packages: read
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
-
-      # Use Docker Compose to start your container
-      - name: Start Docker container
-        run: docker-compose up -d github-action
-
-      # Run tests in container
-      - name: Run Tests
-        run: docker-compose exec -T github-action yarn react-scripts test --watchAll=false
-        timeout-minutes: 2
+      - name: Log in to the Container registry
+        uses: docker/login-action@v1
+        with:
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      - name: pull
+        run: |
+          docker pull ghcr.io/codykilpatrick/portfolio-react:latest
