--- a/.github/workflows/checks-ghcr.yml
+++ b/.github/workflows/checks-ghcr.yml
@@ -30,3 +30,6 @@ jobs:
       - name: pull
         run: |
           docker pull ghcr.io/codykilpatrick/portfolio-react:latest
+      - name: Run Tests
+        run: docker-compose exec -T github-action yarn react-scripts test --watchAll=false
+        timeout-minutes: 2
