--- a/.github/workflows/checks-ghcr.yml
+++ b/.github/workflows/checks-ghcr.yml
@@ -31,7 +31,7 @@ jobs:
         run: |
           docker pull ghcr.io/codykilpatrick/portfolio-react:latest
       - name: Start Docker container
-        run: docker build portfolio-react .
+        run: docker build -t my-custom-image --build-arg BASE_IMAGE=ghcr.io/codykilpatrick/portfolio-react:latest .
       - name: Run Tests
         run: docker-compose exec -T yarn react-scripts test --watchAll=false
         timeout-minutes: 2
