--- a/.github/workflows/checks-ghcr.yml
+++ b/.github/workflows/checks-ghcr.yml
@@ -21,6 +21,8 @@ jobs:
     permissions:
       packages: read
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
       - name: Log in to the Container registry
         uses: docker/login-action@v1
         with:
