--- a/.github/workflows/checks-ghcr.yml
+++ b/.github/workflows/checks-ghcr.yml
@@ -33,4 +33,4 @@ jobs:
         run: |
           docker pull ghcr.io/codykilpatrick/portfolio-react:latest
       - name: Start Docker container
-        run: docker build ghcr.io/codykilpatrick/portfolio-react:latest
+        run: docker build portfolio-react:latest
