--- a/.github/workflows/checks-dh.yml
+++ b/.github/workflows/checks-dh.yml
@@ -20,8 +20,8 @@ jobs:
         uses: actions/checkout@v2
 
       # Use Docker Compose to start your container
-      # - name: Start Docker container
-      #   run: docker-compose up -d github-action
+      - name: Start Docker container
+        run: docker-compose up -d github-action
 
       # Run tests in container
       - name: Run Tests
