--- a/.github/workflows/baseline-checks.yml
+++ b/.github/workflows/baseline-checks.yml
@@ -13,6 +13,21 @@ on:
       - main
 
 jobs:
-  test:
-    - name: Checkout
+  compile:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
         uses: actions/checkout@v2
+
+      # Build Docker image from local Dockerfile
+      - name: Build Docker Image
+        run: docker build -t my-custom-image .
+
+      # Start Docker container using Docker Compose
+      - name: Start Docker container
+        run: docker-compose up -d
+
+      # Run tests in the Docker container
+      - name: Run Tests
+        run: docker-compose exec yarn react-scripts test --watchAll=false
+        timeout-minutes: 2
