--- a/.github/workflows/checks-dh.yml
+++ b/.github/workflows/checks-dh.yml
@@ -19,15 +19,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      # Build Docker image from local Dockerfile
-      - name: Build Docker Image
-        run: docker build -t my-custom-image .
-
-      # Start Docker container using Docker Compose
+      # Use Docker Compose to start your container
       - name: Start Docker container
-        run: docker-compose up -d
+        run: docker-compose up -d github-action
 
-      # Run tests in the Docker container
+      # Run tests in container
       - name: Run Tests
-        run: docker-compose exec yarn react-scripts test --watchAll=false
+        run: docker-compose exec -T github-action yarn react-scripts test --watchAll=false
         timeout-minutes: 2
